tests/lean/sec2.lean.expected.out
expr ↣ _Fun : expr.app
string ↣ name : mk_simple_name
A ↣ B : f
expr ↣ [fun-class] : expr.app
g a : B
sec2.lean:13:6: error: type mismatch at application
  g a
term
  a
has type
  A
but is expected to have type
  B
expr ↣ _Fun : expr.app
string ↣ name : mk_simple_name
A ↣ B : f
expr ↣ [fun-class] : expr.app
g a : B
g a : B
